--- a/files/style.css
+++ b/files/style.css
@@ -1,9 +1,13 @@
 body{
+	background-color: #e0e0e0;
+}
+
+.plate{
 	width: 600px;
 	padding: 5%;
 	margin:5px auto;
 	background-color: white;
-	border: 1px solid lightgray;
+	box-shadow: 0 0 2px grey;
 }
 
 .endline{
