--- a/files/style.css
+++ b/files/style.css
@@ -4,7 +4,7 @@ body{
 
 .plate{
 	width: 600px;
-	padding: 5%;
+	padding: 0 5%;
 	margin:5px auto;
 	background-color: white;
 	box-shadow: 0 0 2px grey;
@@ -15,7 +15,11 @@ body{
 	padding: 5px 3%;
 }
 
-h2, h6,
+h2, h6{
+	text-align: center;
+	padding-top: 50px;
+}
+
 .text_under_img{
 	text-align: center;
 }
